@@ -25,7 +25,7 @@ FIXES/ADDITIONS
 ===============
 Version 1.3.3:
 	- Corrected several bugs in write/read operations;
-	- Corrected severa; key bugs on Iris models.
+	- Corrected several key bugs on Iris models.
 
 Version 1.3.2:
 	- Remade the brl_ReadPacket and brl_WritePacket, to allow writting of 
